modify config propertiesd