@@ -40,7 +40,7 @@ PID_FILE=$IPHARM_HOME/bin/.tmp/${SERVICE_NAME}.pid
 # parse used config
 SERVER_PORT=`sed '/dubbo.protocol.port/!d;s/.*=//' $APP_DIR/etc/$DUBBO_PROPERTIES_FILE | tr -d '\r'`
 JVM_OPTION=`sed '/JVM_OPTION/!d;s/=//;s/JVM_OPTION//' $APP_DIR/etc/$DUBBO_PROPERTIES_FILE | tr -d '\r'`
-if [ -z "$JVM_OPTION" ];then JVM_OPTION="-server -Xms512m -Xmx2g -Xmn128m -XX:+UseParallelGC -XX:PermSize=256M"; fi
+if [ -z "$JVM_OPTION" ];then JVM_OPTION="-server -Xms256m -Xmx256m -Xmn96m -XX:+UseG1GC -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=256m"; fi
 JVM_OPTION=$JVM_OPTION' -agentpath:'$IPHARM_HOME'/bin/hook/libipharmacare_hook.so'
 
 # execute command
